# Own_Library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
include/: arithmetic.h  ntt.h  params.h  poly.h  zetas.h
libs/: .clang-format  CMakeLists.txt  exp_mod.c  exp_mod.h  params.h  poly.c  poly.h  zetas.c  zetas.h
src/: arithmetic.c  main.c  ntt.c  poly.c  zetas.c
verification/: verify.ipynb
